# transcripciones

./: .gitignore  audios_profe.py  makefile  opus_to_mp3.py  pyproject.toml  requirements  transcribir.py
cmd/: cat_pickle.py
consts/: paths.py
utils/: cat_pickle.py  delete_dir.py  opus_to_mp3.py
