[tool.poetry]
name = "transcriptions"
version = "0.1.0"
description = "Convert video files to audio and audio files to text. In Spanish."
authors = ["Salvador Ferradás <sftpo@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
librosa = "^0.10.1"
pydub = "^0.25.1"
soundfile = "^0.12.1"
opuslib = "^3.0.1"
openai-whisper = "^20231117"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
